// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/trial_benefits_modal/trial_benefits_modal_step should match snapshot 1`] = `
<div
  className="TrialBenefitsModalStep slide-container"
  id="trialBenefitsModalStep-stepId"
>
  <div
    className="title"
  >
    Step title
  </div>
  <div
    className="description"
  >
    Step description
  </div>
  <div
    className="stepClassname svg-wrapper"
  >
    <svg />
  </div>
</div>
`;

exports[`components/trial_benefits_modal/trial_benefits_modal_step should match snapshot with optional params 1`] = `
<div
  className="TrialBenefitsModalStep slide-container"
  id="trialBenefitsModalStep-stepId"
>
  <div
    className="title"
  >
    Step title
  </div>
  <div
    className="description"
  >
    Step description
  </div>
  <TrialBenefitsModalStepMore
    id="stepId"
    message="button"
    onClick={[MockFunction]}
    route="/test/page"
  />
  <div
    className="stepClassname svg-wrapper"
  >
    <svg />
  </div>
  <div
    className="bottom-text-left-message"
  >
    Step bottom message
  </div>
</div>
`;
